--- a/templates/jetty-default.erb
+++ b/templates/jetty-default.erb
@@ -25,7 +25,7 @@ JETTY_PORT=<%= scope['solr::port'] %>
 #JETTY_ARGS=
 
 # Extra options to pass to the JVM         
-JAVA_OPTIONS="-Dsolr.solr.home=<%= scope['solr::solr_home'] %> $JAVA_OPTIONS"
+JAVA_OPTIONS="-Dsolr.solr.home=<%= scope['solr::solr_home'] %> -Djetty.host=<%= scope['solr::host'] %> $JAVA_OPTIONS"
 
 # Home of Java installation.
 # JAVA_HOME=
